# Speech-Articulatory-Coding

./: pyproject.toml
sparc/: block.py  generator.py  inversion.py  sparc.py  speech.py  spk_encoder.py  src_extractor.py
