[project]
name = "speech-articulatory-coding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.36.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "soundfile>=0.13.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcrepe>=0.0.24",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
